add client ui